2006-07-20  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/header.txt, data/help/skills.txt, docs/FAQ.txt, README:
	Updated some docs for the 0.0.20 release.
	* NEWS: Added new features of 0.0.20.
	* data/items.xml: Added shorts.
	* src/tmw.rc, The Mana World.dev, tmw.cbp: Added a resource script to
	let both Dev-Cpp and Code::Blocks share the same binary icon and
	version infos.
	* data/graphics/sprites/player_female_base.xml,
	data/graphics/sprites/player_male_base.xml, src/animation.cpp,
	src/animation.h, src/being.cpp: Fixed left bow attack animation,
	made the attack animation stay in sync with attack speed.

2006-07-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/minimap.cpp: Fixed dot size of local player.
	* src/engine.cpp: Fixed color of "[TARGET]".
	* src/resources/mapreader.cpp, src/resources/mapreader.h,
	data/maps/new_12-1.tmx.gz, data/maps/new_3-1.tmx.gz,
	data/maps/new_4-1.tmx.gz, data/maps/new_5-1.tmx.gz,
	data/maps/new_6-1.tmx.gz, data/maps/new_7-1.tmx.gz,
	data/maps/new_8-1.tmx.gz, data/maps/new_9-1.tmx.gz,
	data/maps/new_1-1.tmx.gz, data/maps/new_10-1.tmx.gz,
	data/maps/new_11-1.tmx.gz, data/maps/new_2-1.tmx.gz: Implemented
	loading for the way Tiled saves properties since version 0.6.0 and
	updated all current maps.

2006-07-19  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/item001.png, data/graphics/sprites/item001.xml,
	data/graphics/sprites/item002.png, data/graphics/sprites/item002.xml,
	data/graphics/sprites/item1202.png, data/graphics/sprites/Makefile.am,
	docs/INSTALL/win32.txt, src/animation.cpp, src/being.cpp, src/being.h,
	src/gui/equipmentwindow.cpp, src/gui/newskill.cpp, src/main.cpp,
	src/net/beinghandler.cpp, src/net/charserverhandler.cpp,
	src/player.cpp, src/player.h: Merged trunk changes r2381:2397 into
	new_animation branch.
	* tmw.cbp: Updated Code::Blocks project file.
	* src/gui/char_select.cpp: Fixed next/previous buttons behaviour in
	character selection dialog.